Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: hello-node
 labels:
   app: hello-node
spec:
 replicas: 1
 selector:
   matchLabels:
     app: hello-node
 template:
   metadata:
     labels:
       app: hello-node
   spec:
     containers:
     - name: node
       image: <your docker image>:latest
       ports:
       - containerPort: 8080
